      * system.multicall -- multicall support
      * Authentication System: getAuthToken/appyAuthToken
      * getDiff -- method to get binary diffs
      * mergeDiff -- method to local changes remotely
      * interwikiName -- method to get the IWID and the interwiki moniker
      * getAllPagesEx -- method to get the pagelist in a special way (revnos,
        no system pages etc.)
    * IWID support - i.e. every wiki instance has a unique ID
    * The list of InterWiki sites is editable in the wiki (page InterWikiMap),
      it is getting reloaded every minute
    * Syncronisation of wikis using the SyncPages action
    * GetText2 macro that allows to translate messages that contain data
    * showtags action that lists all tags related to a page
    * if you have "#acl" (without the quotes) on a page, this means now:
      "this page has own (empty) ACLs, so do not use acl_rights_default here"
      Please note that this is COMPLETELY DIFFERENT from having no ACL line at
      all on the page (acl_rights_default is used in that case).
    * Added support for actions in the irssi parser. Thanks to Georg Brandl.
    * */MoinEditorBackup pages are not created any more (TODO: write mig script
      that removes existing ones from data/pages). We now have a drafts
      functionality as follows:
      * if you edit a page and cancel the edit, use preview or save, a draft
        copy gets saved for you to a internal cache area (data/cache/drafts/).
      * if it is a save what you did and it succeeds, the draft copy gets
        killed right afterwards.
      * if you accidentally used cancel or your browser or machine crashes
        after you used preview, then just visit that page again and edit it.
        the editor will notify you that there is a draft of this page and you
        will see a "Load draft" button. Click on it to load the draft into the
        editor and save the page.